examples/negative/protocols/impl_method_arity_mismatch.kai
# Negative fixture (#535 / protocols): `impl P for Box`'s `foo`
# has arity 1, but `protocol P` declares `foo(x: Self, n: Int) : Int`
# (arity 2). The pre-typer impl validator rejects the block on
# the arity mismatch before a call site silently drops the extra
# argument.

protocol P {
  foo(x: Self, n: Int) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : Int = 1
}

fn main() : Int = foo(Box(1), 42)
